--- a/MuaBanSach/mainPage.html
+++ b/MuaBanSach/mainPage.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
@@ -32,7 +33,7 @@
                     <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">Tài khoản của bạn
                     <span class="caret"></span></button>
                     <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
-                      <li role="presentation"><a role="menuitem" tabindex="-1" href="https://www.facebook.com/">Facebook</a></li>
+                      <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Facebook</a></li>
                       <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Đăng nhập</a></li>
                     </ul>
                   </div>
@@ -42,25 +43,210 @@
     </header>
     <div class="row">
         <div class="col-sm-1"></div>
-        <div class="col-sm-3">
-            <svg xmlns="http://www.w3.org/2000/svg" style="display: inline; " width="20" height="20" fill="currentColor" class="bi bi-list-columns-reverse" viewBox="0 0 16 16 ">
-                <path fill-rule="evenodd" d="M0 .5A.5.5 0 0 1 .5 0h2a.5.5 0 0 1 0 1h-2A.5.5 0 0 1 0 .5m4 0a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1h-10A.5.5 0 0 1 4 .5m-4 2A.5.5 0 0 1 .5 2h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5m4 0a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5m-4 2A.5.5 0 0 1 .5 4h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5m4 0a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11a.5.5 0 0 1-.5-.5m-4 2A.5.5 0 0 1 .5 6h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5m4 0a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 0 1h-8a.5.5 0 0 1-.5-.5m-4 2A.5.5 0 0 1 .5 8h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5m4 0a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 0 1h-8a.5.5 0 0 1-.5-.5m-4 2a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5m4 0a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1h-10a.5.5 0 0 1-.5-.5m-4 2a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5m4 0a.5.5 0 0 1 .5-.5h6a.5.5 0 0 1 0 1h-6a.5.5 0 0 1-.5-.5m-4 2a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5m4 0a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11a.5.5 0 0 1-.5-.5"/>
-              </svg>
-              <p style="display: inline;font-size: 20px; padding-bottom: 10px; ">DANH MỤC SẢN PHẨM</p>
+        <div class="col-sm-3" style="padding-top: 0.5%;">
+          <i class="fa-solid fa-list" style="font-size: 110%;"></i>
+          <p style="display: inline;font-size: 110%; padding-bottom: 10px; ">DANH MỤC SẢN PHẨM</p>
         </div>
-        <div class="col-sm-4"></div>
-        <div class="col-sm-4" style="padding: 10px;">
+        <div class="col-sm-4">
+
+        </div>
+        <div class="col-sm-4" style="padding-top: 0.5%;">
             <p style="display: inline;">HotLine:</p>
             <p style="color: green; display: inline;">0938 424 289</p>
         </div>
       </div>
       <div class="row">
-        <div class="col-sm-1">.col-sm-4</div>
-        <div class="col-sm-3">
-            
+        <div class="col-sm-1"></div>
+        <div class="col-sm-2" style="padding-top: 0.5%;">
+          <div class="dropdown" style="padding-top: 2%;">
+            <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown"><strong>Nổi bật</strong>
+            <span class="caret"></span></button>
+            <ul class="dropdown-menu dropdown-menu-right" role="menu" aria-labelledby="menu1">
+              <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Sách bán chạy</a></li>
+              <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Sách mới</a></li>
+              <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Sách phát hành</a></li>
+              <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Sách giảm giá</a></li>
+            </ul>
+          </div>
+          <button style="padding-top: 10%;"><a href="">Truyện Tranh-Comic</a></button><br>
+          <button style="padding-top: 10%;"><a href="">Văn học nước ngoài</a></button><br>
+          <button style="padding-top: 10%;"><a href="">Sale cuối năm 2022</a></button><br>
+          <button style="padding-top: 10%;"><a href="">Sách văn học</a></button><br>
+          <button style="padding-top: 10%;"><a href="">Truyện tranh BL</a></button><br>
+          <button style="padding-top: 10%;"><a href="">Sách kĩ năng sống</a></button><br>
+          <button style="padding-top: 10%;"><a href="">Sách thiếu nhi</a></button><br>
+          <button style="padding-top: 10%;"><a href="">Light Novel</a></button><br>
+          <button style="padding-top: 10%;"><a href="">Văn Phòng Phẩm - Quà Tặng</a></button><br>
+          <div class="dropdown" style="padding-top: 10%;">
+            <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown"><strong>Công ty phát hành</strong>
+            <span class="caret"></span></button>
+            <ul class="dropdown-menu dropdown-menu-right" role="menu" aria-labelledby="menu1">
+              <li role="presentation"><a role="menuitem" tabindex="-1" href="#">IPM</a></li>
+              <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Thái Hà</a></li>
+              <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Kim Đồng</a></li>
+              <li role="presentation"><a role="menuitem" tabindex="-1" href="#">AZ Việt Nam</a></li>
+            </ul>
+          </div>
         </div>
-        <div class="col-sm-4">.col-sm-4</div>
-        <div class="col-sm-4">.col-sm-4</div>
+        <div class="col-sm-6" style="padding-top: 0.5%;">
+          <img src="https://th.bing.com/th/id/R.b73811fc60c423a9ebc8eaa3855d0a0d?rik=AixRAuR5blPgLA&pid=ImgRaw&r=0" alt="Hình ảnh" style="width: fit-content; height:fit-content;">
+        </div>
+        <div class="col-sm-3"></div>
+      </div>
+      <div class="row" style="padding-top: 2%;">
+        <div class="col-sm-1"></div>
+        <div class="col-sm-8" >
+          <label for="" style="background-color:aquamarine; text-align: center; width: 15%"><p style="font-size: 150%; color: black;">Sách mới</p></label>
+        </div>
+        <div class="col-sm-3" >
+          <button style="background-color: azure;"><a href="#" style="font-size: 150%; color: black;">Xem tất cả</a></button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-1"></div>
+        <div class="col-sm-3">
+          <div class="thumbnail">
+            <img src="book1.jpg" alt="Book 1">
+            <div class="caption">
+                <h4>Book 1</h4>
+                <p>Author: Author 1</p>
+                <p>Price: $10</p>
+                <p><a href="#" class="btn btn-primary" role="button">Mua ngay</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-3">
+          <div class="thumbnail">
+            <img src="book1.jpg" alt="Book 1">
+            <div class="caption">
+                <h4>Book 1</h4>
+                <p>Author: Author 1</p>
+                <p>Price: $10</p>
+                <p><a href="#" class="btn btn-primary" role="button">Mua ngay</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-3">
+          <div class="thumbnail">
+            <img src="book1.jpg" alt="Book 1">
+            <div class="caption">
+                <h4>Book 1</h4>
+                <p>Author: Author 1</p>
+                <p>Price: $10</p>
+                <p><a href="#" class="btn btn-primary" role="button">Mua ngay</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-2"></div>
+      </div>
+      <div class="row" style="padding-top: 2%;">
+        <div class="col-sm-1"></div>
+        <div class="col-sm-8" >
+          <label for="" style="background-color:aquamarine; text-align: center; width: 15%"><p style="font-size: 150%; color: black;">Sắp phát hành</p></label>
+        </div>
+        <div class="col-sm-3" >
+          <button style="background-color: azure;"><a href="#" style="font-size: 150%; color: black;">Xem tất cả</a></button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-1"></div>
+        <div class="col-sm-3">
+          <div class="thumbnail">
+            <img src="book1.jpg" alt="Book 1">
+            <div class="caption">
+                <h4>Book 1</h4>
+                <p>Author: Author 1</p>
+                <p>Price: $10</p>
+                <p><a href="#" class="btn btn-primary" role="button">Mua ngay</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-3">
+          <div class="thumbnail">
+            <img src="book1.jpg" alt="Book 1">
+            <div class="caption">
+                <h4>Book 1</h4>
+                <p>Author: Author 1</p>
+                <p>Price: $10</p>
+                <p><a href="#" class="btn btn-primary" role="button">Mua ngay</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-3">
+          <div class="thumbnail">
+            <img src="book1.jpg" alt="Book 1">
+            <div class="caption">
+                <h4>Book 1</h4>
+                <p>Author: Author 1</p>
+                <p>Price: $10</p>
+                <p><a href="#" class="btn btn-primary" role="button">Mua ngay</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-2"></div>
+      </div>
+      <div class="row" style="padding-top: 2%;">
+        <div class="col-sm-1"></div>
+        <div class="col-sm-8" >
+          <label for="" style="background-color:aquamarine; text-align: center; width: 15%"><p style="font-size: 150%; color: black;">Sách bán chạy</p></label>
+        </div>
+        <div class="col-sm-3" >
+          <button style="background-color: azure;"><a href="#" style="font-size: 150%; color: black;">Xem tất cả</a></button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-1"></div>
+        <div class="col-sm-3">
+          <div class="thumbnail">
+            <img src="book1.jpg" alt="Book 1">
+            <div class="caption">
+                <h4>Book 1</h4>
+                <p>Author: Author 1</p>
+                <p>Price: $10</p>
+                <p><a href="#" class="btn btn-primary" role="button">Mua ngay</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-3">
+          <div class="thumbnail">
+            <img src="book1.jpg" alt="Book 1">
+            <div class="caption">
+                <h4>Book 1</h4>
+                <p>Author: Author 1</p>
+                <p>Price: $10</p>
+                <p><a href="#" class="btn btn-primary" role="button">Mua ngay</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-3">
+          <div class="thumbnail">
+            <img src="book1.jpg" alt="Book 1">
+            <div class="caption">
+                <h4>Book 1</h4>
+                <p>Author: Author 1</p>
+                <p>Price: $10</p>
+                <p><a href="#" class="btn btn-primary" role="button">Mua ngay</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-2"></div>
       </div>
 </body>
+<footer>
+  <div class="row">
+    <div class="col-sm-1"></div>
+    <div class="col-sm-9">
+      <p style="padding-top: 5%;">Mua Sách Online Tại MuaBanSach.vn</p>
+      <hr>
+      <p>&copy; 2024 Tên Website Bán Sách. All rights reserved.</p>
+        <p>
+            <a href="#">Trang chủ</a>
+            <a href="#">Sách Mới</a>
+            <a href="#">Sách Bán Chạy</a>
+            <a href="#">Liên Hệ</a>
+        </p>
+    </div>
+    <div class="col-sm-2"></div>
+  </div> 
+</footer>
 </html>
