--- a/MuaBanSach/mainPage.html
+++ b/MuaBanSach/mainPage.html
@@ -99,7 +99,7 @@
           <label for="" style="background-color:aquamarine; text-align: center; width: 15%"><p style="font-size: 150%; color: black;">Sách mới</p></label>
         </div>
         <div class="col-sm-3" >
-          <button style="background-color: azure;"><a href="#" style="font-size: 150%; color: black;">Xem tất cả</a></button>
+          <button style="background-color: azure;"><a href="sachMoi.html" style="font-size: 150%; color: black;">Xem tất cả</a></button>
         </div>
       </div>
       <div class="row">
