--- a/MuaBanSach/sachMoi.html
+++ b/MuaBanSach/sachMoi.html
@@ -95,4 +95,21 @@
         </div>
     </div>
 </body>
+<footer>
+    <div class="row">
+      <div class="col-sm-1"></div>
+      <div class="col-sm-9">
+        <p style="padding-top: 5%;">Mua Sách Online Tại MuaBanSach.vn</p>
+        <hr>
+        <p>&copy; 2024 Tên Website Bán Sách. All rights reserved.</p>
+          <p>
+              <a href="#">Trang chủ</a>
+              <a href="#">Sách Mới</a>
+              <a href="#">Sách Bán Chạy</a>
+              <a href="#">Liên Hệ</a>
+          </p>
+      </div>
+      <div class="col-sm-2"></div>
+    </div> 
+  </footer>
 </html>
