--- a/MuaBanSach/SachMoi/sachMoi.html
+++ b/MuaBanSach/SachMoi/sachMoi.html
@@ -12,6 +12,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="/MuaBanSach/style.css">
 </head>
 <body>
     <div class="row" style="background-color: aquamarine;padding: 0px;">
@@ -40,9 +41,11 @@
               </div>
             </select>
         </div>
-      </div>
-      <div style="display: flex; flex-direction: row;">
-        <h4 style="color: green;margin-right: 5px;" id="h4sachmoi" >Nhà Sách trên mạng  /</h4>
+    </div>
+      <div class="DuoiTieuDe">
+        <a href="/MuaBanSach/mainPage.html">
+            <h4 style="color: green;margin-right: 5px;" id="h4sachmoi" >Nhà Sách trên mạng  /</h4>
+        </a>
         <h4 id="h4sachmoi">Sach moi</h4>
     </div>
     <br><h3><strong>Sách Mới</strong></h3>
@@ -67,10 +70,13 @@
         <div class="row">
             <div class="col-sm-4">
                 <div class="thumbnail">
-                    <img src="book1.jpg" alt="Book 1">
+                    
+                    <a href="book1.html">
+                        <img src="https://st.nettruyentt.com/data/comics/175/naruto-new-generation.jpg" alt="Book 1" title="b1">
+                    </a>
                     <div class="caption">
-                        <h4>Tên sách 1</h4>
-                        <p>Mô tả ngắn gọn về cuốn sách 1</p>
+                        <h4>CỬU VĨ HỒ LY NGOẠI TRUYỆN</h4>
+                        <p>Rogie Custodio</p>
                     </div>
                 </div>
             </div>
